Add CSS styling to website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <title>My First Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, Website World</h1>
+
+    <h1>Hello, I am learning Web Development</h1>
     <p>This is my first website.</p>
+
 </body>
 </html>
