Added CSS styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-
     <title>My First Website</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
-    <h1>Hello, I am learning Web Development</h1>
-    <p>This is my first website.</p>
+    <div>
+        <h1>Hello, Website World</h1>
+        <p>This is my first website.</p>
+    </div>
+
+    <div>
+        <h2>About Me</h2>
+        <p>I am learning web development step by step.</p>
+    </div>
+
+    <div>
+        <h2>Contact</h2>
+        <input type="text" placeholder="Enter your name">
+        <br><br>
+        <button>Submit</button>
+    </div>
 
 </body>
 </html>
